menu mobile scroll fixed, map on mobile fixed

--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -15,6 +15,7 @@
 .mapFrame {
   border: 0;
   max-height: 70vh;
+  width: 100%;
 }
 .formSectionContainer {
   position: relative;
